--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,26 @@
 }*/
 
 
+/*Estilos Generales*/
+body {
+    font-family: Helvetica, Arial, Open Sans, sans-serif;
+    font-size: 14px;
+    color: #333;
+    margin: 0;
+}
 
-
-
-
-
-
+a {
+    text-decoration: none;
+    color: #fff;
+}
+/*Estilos Particulares*/
+header {
+    background-color: #333;
+}
+header h1 {
+    color: #fff;
+    margin: 0;
+}
 
 
 
