Maquetando el menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
-/* {
+/** {
     margin: 0;
     padding: 0;
 }*/
 
 
 /*Estilos Generales*/
+* {
+    outline: dotted 1px red;
+}
 body {
     font-family: Helvetica, Arial, Open Sans, sans-serif;
     font-size: 14px;
@@ -23,6 +26,19 @@ header {
 header h1 {
     color: #fff;
     margin: 0;
+}
+header nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+header nav ul li {
+    display: inline-block;
+}
+header nav a {
+    text-align: center;
+    width: 65px;
+    padding: 5px;
 }
 
 
