--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,17 @@ a {
 /*Estilos Particulares*/
 header {
     background-color: #333;
+    overflow: auto;
+    padding: 15px;
 }
 header h1 {
     color: #fff;
     margin: 0;
+    float: left;
+}
+header nav {
+    float: right;
+    padding: 10px;
 }
 header nav ul {
     margin: 0;
@@ -40,6 +47,7 @@ header nav a {
     width: 65px;
     padding: 5px;
 }
-
-
-
+header nav a:hover {
+    color: #333;
+    background-color: #fff;
+}
